--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
 
     <title> Yoga posenet Demo </title>
 
-    <!-- Implement this library Using this cdn -->
+    <!-- Implement this library Using ml5js this cdn -->
+
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+
+    <!-- Implement this library Using ml5js this cdn --> 
+
+    <!-- Implement this library Using p5js this cdn -->
     
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
 
-     <!-- Implement this library Using this cdn -->
+     <!-- Implement this library Using p5js this cdn -->
 
     <script src="index.js"></script>
 
